--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "@azure/msal-browser": "^3.26.1",
+    "@azure/msal-react": "^2.1.0",
     "@auth0/auth0-react": "^2.2.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
